spec/e2e/string/error_after_multiline.lit
# Tests that we correctly track the line info across multiline strings.
let a = "1
2
3
";

err; # error: [line 7] Undefined variable 'err'.
